changes in text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <div id="portugues">
         <div class="texto-principal">
-          <p>Como uma estrela cintilante que caiu do céu e floresceu na terra, a Dama da Noite enfeita e perfuma os jardins brasileiros. Durante o dia, ela se esconde timidamente, enquanto as outras flores concorrem em beleza.</p>
+          <p>Como uma estrela cintilante que caiu do céu e floresceu na terra, a Dama da Noite enfeita e perfuma os jardins brasileiros. Quando anoitece, ela desperta e se transforma na joia do jardim, revelando suas pétalas estreladas que liberam o inconfundível perfume que inibria o caminho de quem passa.</p>
         </div>
       </div>
     </header>
@@ -92,7 +92,7 @@
 
 
     <div class="texto-principal">
-      <p> As a shiny star that fell from the sky and blooms on the Earth, the <span>Dama da Noite</span> (Cestrum Nocturnum) decorates the Brazilian forests. During day she hides while other flowers compete in their beauty. But when the night falls, she awakes and becomes a jewel in the garden, opening her starry petals and exuding an irresistible scent.</p>
+      <p> As a shiny star that fell from the sky and blooms on the Earth, the <span>Dama da Noite</span> (Cestrum Nocturnum) decorates the Brazilian gardens. When the night falls, she awakes and becomes a jewel in the garden, revealing her starry petals and exuding an irresistible scent.</p>
     </div>
   </div>
 
