changed the word earth to ground

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
     <div class="texto-principal">
-      <p> As a shiny star that fell from the sky and blooms on the Earth, the <span>Dama da Noite</span> (Cestrum Nocturnum) decorates the Brazilian gardens. When the night falls, she awakes and becomes a jewel in the garden, revealing her starry petals and exuding an irresistible scent.</p>
+      <p> As a shiny star that fell from the sky and blooms on the ground, the <span>Dama da Noite</span> (Cestrum Nocturnum) decorates the Brazilian gardens. When the night falls, she awakes and becomes a jewel in the garden, revealing her starry petals and exuding an irresistible scent.</p>
     </div>
   </div>
 
